frontend/src/components/Subset/Subset.css
.styles_overlay-wrapper__O0Zm8 .styles_overlay-content__1qZR_ {
  padding: 2em;
  background-color: white;
  max-width: 600px;
  position: relative;
  margin: auto;
  transition: opacity 0.85s;
  border-radius: 5%;
  border-color: red;
  border-width: 10vh;
}

.attrImportance {
  height: 20vh;
  overflow-y: auto;
}

